--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,14 @@
                     >Learn more</a>
                 </div>
             </section>
+            <section class="block w-full bg-(--brand) py-24 px-12">
+                <div class="block mx-auto max-w-full w-[1400px] text-white text-center">
+                    <h1 class="uppercase font-bold text-6xl">One Platform. Infinite Potential.</h1>
+                    <div class="block mx-auto w-1/3 h-[2px] bg-white my-12"></div>
+                    <p class="text-2xl mb-4">Designed to scale effortlessly for companies that prioritize space planning and inventory management.</p>
+                    <p class="text-2xl">SPACE PLACE's modular platforfm empowers warehouse managers to securely optimize space and shelving through advanced planning and seamless integration tools. The modular nature of the platform allows you to choose the specific tools you need and scale as your business grows.</p>
+                </div>
+            </section>
         </main>
     </body>
 </html>
