Added solutions section (desktop)

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
         <style>
             :root {
                 --brand: #1d2e42;
+                --brand-alt: #8cc63f;
+                --em-dash: '—';
+                --en-dash: '–';
 
                 --hero-ar: 5/3;
             }
@@ -80,6 +83,55 @@
                     <div class="block mx-auto w-1/3 h-[2px] bg-white my-12"></div>
                     <p class="text-2xl mb-4">Designed to scale effortlessly for companies that prioritize space planning and inventory management.</p>
                     <p class="text-2xl">SPACE PLACE's modular platforfm empowers warehouse managers to securely optimize space and shelving through advanced planning and seamless integration tools. The modular nature of the platform allows you to choose the specific tools you need and scale as your business grows.</p>
+                </div>
+            </section>
+            <section id="solutions" class="block w-full bg-(--brand) border-t-[5px] border-t-(--brand-alt) p-8 pt-14 relative">
+                <img-shim class="absolute top-0 right-0 overflow-hidden w-screen h-[190px]">
+                    <img 
+                        src="/images/bg.jpg" 
+                        alt="futuristic 3d warehouse blueprint"
+                        class="min-w-full min-h-full absolute bottom-0 right-0"
+                    >
+                </img-shim>
+                <div class="w-[1400px] max-w-full mx-auto grid grid-cols-2 gap-24 text-white">
+                    <div class="relative">
+                        <h3 class="block uppercase text-3xl font-medium ml-[19px]">Space Place</h3>
+                        <div class="block border-l-3 border-l-(--brand-alt) pl-4 pb-8">
+                            <h2 class="block uppercase text-6xl font-bold mb-24">Visual</h2>
+                            <p class="uppercase text-2xl mb-12">Start planning today - download and see your plan come to live.</p>
+                            <ul class="text-2xl list-(--en-dash) pl-4">
+                                <li class="pl-4">Planogram Development (3D)</li>
+                                <li class="pl-4">PSA Viewer</li>
+                                <li class="pl-4">Shelf signage/label layout</li>
+                                <li class="pl-4">Employee wayfinding tools</li>
+                                <li class="pl-4">Item Libraries</li>
+                                <li class="pl-4">High performance rendering</li>
+                                <li class="pl-4">Broad image format support</li>
+                                <li class="pl-4">Interoperable layout importing</li>
+                                <li class="pl-4">Material diversity</li>
+                                <li class="pl-4">Scene serialization & deserialization</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <h3 class="block uppercase text-3xl font-medium ml-[19px]">Space Place</h3>
+                        <div class="block border-l-3 border-l-(--brand-alt) pl-4 pb-8">
+                            <h2 class="block uppercase text-6xl font-bold mb-24">Connect</h2>
+                            <p class="uppercase text-2xl mb-12">Your collaborative approach to total software integration.</p>
+                            <ul class="text-2xl list-(--en-dash) pl-4">
+                                <li class="pl-4">
+                                    Command Center
+                                    <ul class="text-2xl list-disc pl-4">
+                                        <li class="ml-4">Real-Time Visibility of data and patterns</li>
+                                        <li class="ml-4">Transforms massive data into actionable insights by leveraging Agentic Intelligence</li>
+                                        <li class="ml-4">Volume and throughput monitoring</li>
+                                    </ul>
+                                </li>
+                                <li class="pl-4">Using clustered computing combined with pre-compiled code, we ensure resilience and speed continue regardless of scale</li>
+                                <li class="pl-4">Simple / Intuitive integration (no coding needed)</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
