--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,82 @@
                     </div>
                 </div>
             </section>
+            <section class="block w-full bg-(--brand) py-24 px-12">
+                <div class="block mx-auto max-w-full w-[1400px] text-white text-center">
+                    <h1 class="font-bold text-6xl">TRUSTED and SECURE</h1>
+                    <div class="block mx-auto w-1/3 h-[2px] bg-white my-12"></div>
+                    <p class="text-2xl">Our mission is empowering your business with a secure, intelligent platform architecture that unifies systems, optimize space, and drives operational excellence — while upholding the highest standards of data privacy and protection.</p>
+                </div>
+            </section>
+            <hr noshade class="w-full border-b-[5px] border-b-(--brand-alt)">
+            <section class="block w-full bg-(--brand) py-24 px-12">
+                <div class="block mx-auto max-w-full w-[1400px] text-white text-center">
+                    <h1 class="font-bold text-6xl uppercase">About Us</h1>
+                    <div class="block mx-auto w-1/3 h-[2px] bg-white my-12"></div>
+                    <p class="text-2xl">Coupled with years of industry knowledge and a drive to support greater efficiency and effectiveness in warehouse logistics and operations. SPACE PLACE works with our customers to understand their unique business needs and challenges - delivering the best in class solutions tailored to optimize your warehouse planning, logistics and operations.</p>
+                </div>
+                <div class="block mx-auto mt-24 max-w-full w-[1400px] text-white text-center">
+                    <h3 class="text-2xl block mb-6 text-left">Management Team:</h3>
+                    <div class="grid grid-cols-4 gap-12">
+                        <div>
+                            <img 
+                                src="/images/david.jpg" 
+                                alt="a photo of David Replogle"
+                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                            >
+                            <p class="text-left">
+                                David Replogle,
+                                <br>
+                                Co-Founder
+                                <br>
+                                <a target="_blank" href="mailto:david@spaceplace.app">David@spaceplace.app</a>
+                            </p>
+                        </div>
+                        <div>
+                            <img 
+                                src="/images/sam.jpg" 
+                                alt="a photo of Sam Rhew"
+                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                            >
+                            <p class="text-left">
+                                Sam Rhew,
+                                <br>
+                                Co-Founder
+                                <br>
+                                <a target="_blank" href="mailto:sam@spaceplace.app">Sam@spaceplace.app</a>
+                            </p>
+                        </div>
+                        <div>
+                            <img 
+                                src="/images/brian.jpg" 
+                                alt="a photo of Brian Scott"
+                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                            >
+                            <p class="text-left">
+                                Brian Scott,
+                                <br>
+                                Co-Founder
+                                <br>
+                                <a target="_blank" href="mailto:brian@spaceplace.app">Brian@spaceplace.app</a>
+                            </p>
+                        </div>
+                        <div>
+                            <img 
+                                src="/images/kyle.jpg" 
+                                alt="a photo of Kyle Andrews"
+                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                            >
+                            <p class="text-left">
+                                Kyle Andrews,
+                                <br>
+                                Senior Developer
+                                <br>
+                                <a target="_blank" href="mailto:kyle@spaceplace.app">Kyle@spaceplace.app</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
