--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,8 @@
                     </div>
                 </div>
             </section>
+            <footer class="w-full border-t-[5px] border-t-(--brand-alt)">
+            </footer>
         </main>
     </body>
 </html>
