Switched profile pictures to webp

--- a/public/index.html
+++ b/public/index.html
@@ -154,9 +154,9 @@
                     <div class="grid grid-cols-4 gap-12">
                         <div>
                             <img 
-                                src="/images/david.jpg" 
+                                src="/images/david.webp" 
                                 alt="a photo of David Replogle"
-                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                                class="rounded-4xl w-[200px] aspect-square mb-2 bg-white"
                             >
                             <p class="text-left">
                                 David Replogle,
@@ -168,9 +168,9 @@
                         </div>
                         <div>
                             <img 
-                                src="/images/sam.jpg" 
+                                src="/images/sam.webp" 
                                 alt="a photo of Sam Rhew"
-                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                                class="rounded-4xl w-[200px] aspect-square mb-2 bg-white"
                             >
                             <p class="text-left">
                                 Sam Rhew,
@@ -182,9 +182,9 @@
                         </div>
                         <div>
                             <img 
-                                src="/images/brian.jpg" 
+                                src="/images/brian.webp" 
                                 alt="a photo of Brian Scott"
-                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                                class="rounded-4xl w-[200px] aspect-square mb-2 bg-white"
                             >
                             <p class="text-left">
                                 Brian Scott,
@@ -196,9 +196,9 @@
                         </div>
                         <div>
                             <img 
-                                src="/images/kyle.jpg" 
+                                src="/images/kyle.webp" 
                                 alt="a photo of Kyle Andrews"
-                                class="rounded-3xl w-[200px] aspect-square mb-2 bg-white"
+                                class="rounded-4xl w-[200px] aspect-square mb-2 bg-white"
                             >
                             <p class="text-left">
                                 Kyle Andrews,
